--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@astrajs/collections": "0.0.14",
+    "@astrajs/collections": "^0.1.0",
     "fastify": "^3.17.0",
     "fastify-formbody": "^5.0.0",
     "fastify-static": "^4.2.2",
