--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": { "node": "16.x" },
   "dependencies": {
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.3",
